--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> Alexander Podkopaev </h1>
 
-I'm a student of Lyceum 30, and I'm interested in programming.
+I'm a student of <a href="https://school30.spb.ru">Lyceum 30</a>, and I'm interested in programming.
