--- a/animal.html
+++ b/animal.html
@@ -12,6 +12,6 @@
       <li>Любящие поспать.</li>
     </ol>
     <p>Также медведь любит сладкое, на подобии меда или ягод, как и я.</p>
-    <p><a href = "Подкопаев_А.В..html">По этой ссылке</a> вы можете прочитать про меня подробнее.</p>
+    <p><a href = "bio.html">По этой ссылке</a> вы можете прочитать про меня подробнее.</p>
   </body>
 </html>
