animal.html and bio.html correction

--- a/animal.html
+++ b/animal.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Мое тотемное животное - это медведь.</h1>
-    <h2><img src = "Медведь.jpg" height = "175px"/></h2>
+    <h2><img src = "bear.jpg" height = "175px"/></h2>
     <p>Я считаю, что медеведь и я имеем некоторые схожести, как:</p>
     <ol>
       <li>Большая комплекция тела.</li>
