File corrected(Guesse the number)

--- a/guess_the_number/index.html
+++ b/guess_the_number/index.html
@@ -22,7 +22,7 @@
                 M = Math.ceil((A + B) / 2);
             }
           } 
-          confirm("Ваше число " + A + ".")
+          alert("Ваше число " + A + ".")
       }
     </script>
   </body>
